--- a/public/survival.html
+++ b/public/survival.html
@@ -343,7 +343,9 @@
     }
 
     function connectWebSocket() {
-      ws = new WebSocket(`ws://${window.location.host}`);
+      // Detectar si usar ws:// o wss:// según el protocolo de la página
+      const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+      ws = new WebSocket(`${protocol}//${window.location.host}`);
       
       ws.onopen = () => {
         log('Conectado al servidor', 'success');
